Spock을 이용한 테스트 실습

--- a/exercises/demo/pom.xml
+++ b/exercises/demo/pom.xml
@@ -69,6 +69,22 @@
             <version>2.0.4.RELEASE</version>
         </dependency>
 
+        <!-- spock -->
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+            <version>0.7-groovy-2.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+        <!-- groovy에서 Mock 생성 위해 추가 -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.12</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
